PLAT-727: removed tooltip hide on IE9 as we've hopefully fixed this on RND now

--- a/cr/themes/custom/campaign_base/ie9-css/styles-override/styles-override.css
+++ b/cr/themes/custom/campaign_base/ie9-css/styles-override/styles-override.css
@@ -70,9 +70,3 @@
   height: 60px;
   text-align: center;
 }
-
-/*Hide on IE9 and below*/
-.ui-tooltip.ui-tooltip--nav {
-  display: none !important;
-}
-
